<resources>
    <string name="app_name">EazyOrder</string>
    <string name="login">Login Here</string>
    <string name="signup">SignUp Here</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
