<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F9F9"
    tools:context=".Register">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_centerInParent="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="5dp"
        android:paddingLeft="@dimen/layout_width20"
        android:layout_marginBottom="30dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_width20"
                android:textSize="@dimen/textsize_25"
                android:textColor="#000"
                android:layout_marginLeft="@dimen/textsize_15"
                android:text="@string/register_text" />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_name"
                android:background="@drawable/edittext_border"
                android:layout_marginTop="@dimen/layout_width20"
                android:layout_marginLeft="@dimen/layout_width15"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:paddingLeft="@dimen/textsize_15"
                android:layout_marginRight="@dimen/layout_width15"
                android:layout_below="@id/textView"
                android:inputType="textPersonName"
                android:text="" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_password"
                android:background="@drawable/edittext_border"
                android:layout_marginTop="@dimen/layout_width20"
                android:layout_marginLeft="@dimen/layout_width15"
                android:layout_marginRight="@dimen/layout_width15"
                android:layout_below="@id/editText_name"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:inputType="textPersonName"
                android:paddingLeft="@dimen/textsize_15"
                android:text="" />

            <EditText
                android:id="@+id/editText_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_password"
                android:background="@drawable/edittext_border"
                android:layout_marginTop="@dimen/layout_width20"
                android:layout_marginLeft="@dimen/layout_width15"
                android:layout_marginRight="@dimen/layout_width15"
                android:layout_below="@id/editText_password"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:inputType="textPersonName"
                android:paddingLeft="@dimen/textsize_15"
                android:text="" />
            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_email"
                android:background="@drawable/edittext_border"
                android:layout_marginTop="@dimen/layout_width20"
                android:layout_marginLeft="@dimen/layout_width15"
                android:layout_marginRight="@dimen/layout_width15"
                android:layout_below="@id/editText_confirm_password"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:inputType="textPersonName"
                android:paddingLeft="@dimen/textsize_15"
                android:text="" />

            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_phone_number"
                android:background="@drawable/edittext_border"
                android:layout_marginTop="@dimen/layout_width20"
                android:layout_marginLeft="@dimen/layout_width15"
                android:layout_marginRight="@dimen/layout_width15"
                android:layout_below="@id/editText_email"
                android:drawableLeft="@drawable/ic_phone_iphone_black_24dp"
                android:inputType="textPersonName"
                android:paddingLeft="@dimen/textsize_15"
                android:text="" />


            <Button
                android:id="@+id/button_register"
                android:layout_below="@id/editText_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_register"
                android:layout_marginTop="@dimen/layout_width20"
                android:layout_marginLeft="@dimen/layout_width15"
                android:layout_marginRight="@dimen/layout_width15"
                android:textColor="#fff"
                android:text="Register" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_register"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="OR"
                android:id="@+id/text_or"
                android:textSize="@dimen/textsize_15" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_or"
                android:layout_marginLeft="@dimen/layout_width15"
                android:layout_marginRight="@dimen/layout_width15"
                android:background="@drawable/button_border"
                android:layout_marginTop="@dimen/textsize_15"
                android:textColor="#fff"
                android:text="@string/login_text" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>